# parlance

./: README.md  pyproject.toml
src/parlance/: __main__.py  cli.py
